# NeuRPi

./: .dockerignore  .env  .gitignore  CONSOLIDATION_SUMMARY.md  Dockerfile  ENHANCED_CLI_SETUP.md  ENHANCED_CLI_SETUP_COMPLETE.md  INSTALL.md  LICENSE  MIGRATION.md  Need_to_refactor.txt  NeuRPi.py  README.md  README.txt  calibrate_reward.sh  cleanup_neurpi.bat  coh_level_change.py  commitlink.config.yaml  commitlint.config.yaml  corrected_validation.py  debug_handshake.py  docker-compose.yaml  final_validation.py  main.py  name_summary.csv  network_diagnostics.py  neuro_experiment.h5  neurpi_pilot.py  neurpi_terminal.py  new_rough.py  note.py  pyproject.toml  requirements.txt  rough.py  rough_pilot.py  rough_terminal.py  setup.py  start.bat  start.sh  subject copy.ipynb  (+7 more)
NeuRPi/: __init__.py  exceptions.py  prefs.py  root.py
NeuRPi.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
NeuRPi/agents/: agent_pilot.py  agent_terminal.py  pilot.py  terminal.py  test_pilot.py  test_terminal.py
NeuRPi/config/: config.yaml  config_demo.yaml  config_pilot.yaml  config_terminal.yaml  networking.yaml  setup_config.yaml
NeuRPi/data_logger/: logger.py  subject.py
NeuRPi/data_logger/modeling/: base.py
NeuRPi/data_logger/models/: biography.py  subject.py
NeuRPi/data_model/: data_logger.py  hdf5_data.py  subject.py
NeuRPi/gui/: gui.py  hardware.ui  interface.ui  main.ui  main_gui.py  main_gui.ui  main_window.ui  new_subject_form.ui  rdk.py  rdk_gui.py  rough.py  settings.ui  summary_window.ui
NeuRPi/hardware/: arduino.py  display.py  display_manager copy.py  display_manager.py  gpio.py  hardware.py  hardware_manager.py
NeuRPi/logger/: data_logger.py  subject.py
NeuRPi/loggers/: data_logger.py  logger.py
NeuRPi/networking/: __init__.py  message.py  node.py  pilot.py  station.py  terminal.py
NeuRPi/stimulus/: RandomMotion.py  display.py  display_manager.py  display_old.py  sounds_generator.py  stim_window.py  stimulus_manager.py  stimulus_manager_old.py  video.py
NeuRPi/tasks/: task.py  trial_construct.py
NeuRPi/utils/: configs.py  get_config.py  invoker.py  pref_setting.py  process_manager.py  setup_config.py
Protocols/RDK/config/: dynamic_coherences.yaml  stimulus.yaml
Protocols/RDK/data_model/: subject.py
Protocols/RDK/hardware/: behavior.py  hardware_manager.py
Protocols/RDK/stimulus/: RDK.py  RDK_manager.py  display.py  display_manager.py  random_dot_kinematogram.py  rdk_stimulus.py
Protocols/RDK/tasks/: behavior.py  dynamic_coherences.py  dynamic_training_rt.py  rdk_rt.py  rt_task.py  rt_task_in_progress.py  training_behavior.py  training_dynamic.py  training_dynamic_coh.py
Tasks/RDK/task/: RDK.py  behavior.py
autopilot/: root.py
conf/: config_rdk.yaml  rdk.yaml
data/: Data.py
doc/: INSTALLATION.md
docs/: ENHANCED_CLI_SETUP_COMPLETE.md  INSTALLATION.md
hardwares/: __init__.py  arduino.py  hardware.py
neurpi/: __init__.py  __main__.py  exceptions.py  prefs.py  root.py
neurpi/agents/: agent_pilot.py  agent_terminal.py  controller.py  rig.py
neurpi/cli/: main.py  setup.py
neurpi/config/: combined_config.yaml  config_pilot.yaml  config_terminal.yaml  example.yaml
neurpi/data_model/: data_logger.py  subject.py
neurpi/gui/: __init__.py  controller_window.ui  gui_manager.py  main_gui.py  main_gui.ui  new_subject_form.ui  start_window.ui  subject_dialog.ui
neurpi/gui/new_version/: controller_window.py  gui_manager.py  main_gui.ui
neurpi/hardware/: arduino.py  display.py  display_manager.py  hardware_manager.py
neurpi/loggers/: __init__.py  logger.py
neurpi/networking/: __init__.py  message.py  node.py  station.py
neurpi/stimulus/: display.py  display_old.py
neurpi/tasks/: task.py  trial_construct.py
neurpi/utils/: __init__.py  helpers.py  parallel_manager.py  process_manager.py
protocols copy/RDK/tasks/: rt_task_old.py
protocols/RDK/config/: stimulus.yaml
protocols/RDK/hardware/: behavior.py
protocols/RDK/stimulus/: display.py  display_manager.py
protocols/RDK/tasks/: dynamic_training_rt.py  rt_task.py
protocols/random_dot_motion/Do_not_use_pretraining/: 1-config-passive.py  2-config-active-passive.py  3-config-active.py
protocols/random_dot_motion/config/: dynamic_training_rt.yaml  free_reward_training.yaml  rt_dynamic_training.yaml  stimulus.yaml
protocols/random_dot_motion/data_model/: subject.py
protocols/random_dot_motion/free_reward_training/: 1-config-active.py  1-config-passive.py  1-config.py  2-config-active-passive.py  config.py  session_manager.py  stimulus_manager.py  task.py
protocols/random_dot_motion/gui/: rdk_rig.ui  summary.ui  task_gui.py
protocols/random_dot_motion/hardware/: behavior.py  hardware_manager mpr121.py  hardware_manager.py
protocols/random_dot_motion/hardware1/: hardware_manager.py  test.py
protocols/random_dot_motion/pretraining/: 1-config-active-passive.py  1-config-passive-blocked.py  1-config-passive.py  2-config-active-passive.py  2-config-active.py  2-config-passive-interleaved.py  3-config-active.py  session_manager.py  stimulus_manager.py  task.py
protocols/random_dot_motion/reward_spout_association/: 1-config.py  2-config-bias-limit-1020.py  3-conservative-switching-with-compoud-conditioning.py  config.py  session_manager.py  sm2.py  task.py
protocols/random_dot_motion/reward_spout_stimulus_association/: 3-conservative-switching-with-compoud-conditioning.py  config.py  session_manager.py  stimulus_manager.py  task.py
protocols/random_dot_motion/rt_directional_training/: 1-config-left-only.py  1-kor-blocked-schedule.py  2-config-right-only.py  2-kor-interleaved-schedule.py  3-config-blocked.py  3-config-interleaved.py  4-KOR-left-only.py  4-config-interleaved.py  5-KOR-right-only.py  5-kor-left-only.py  6-KOR-interleaved.py  7-kor-blocked.py  config.py  session_manager.py  stimulus_manager.py  task.py
protocols/random_dot_motion/rt_dynamic_training/: 1-config-active.py  1-config.py  behavior.py  (+6 more)
requirements/: base.txt
src.egg-info/: SOURCES.txt  top_level.txt
src/task/: task.py
tasks/: RDK.py  behavior.py  task.py
tests/: .coverage  test_gui.py
(+177 files in other folders)
