[build-system]
requires = ["setuptools>=61.0", "wheel", "tomli>=1.2.0; python_version<'3.11'"]
build-backend = "setuptools.build_meta"

[project]
name = "NeuRPi"
version = "0.2.0"
description = "Distributed Neuroscience Experimentation Platform"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [
    { name = "Vaibhav Thakur", email = "vaibhavt459@gmail.com" },
]
keywords = ["neuroscience", "experiment", "distributed", "raspberry-pi", "behavioral-analysis"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

# Core dependencies (base requirements)
dependencies = [
    "blosc2>=2.5.0",
    "numpy<2.0.0",
    "matplotlib>=3.5.0",
    "click>=8.0.0",
    "rich>=13.0.0",
    "omegaconf>=2.2.2",
    "pyserial>=3.5",
    "pyzmq>=25.0.0",
    "tornado>=6.0.0",
    "h5py>=3.8.0",
    "sounddevice>=0.4.6",
    "tables>=3.8.0",
    "pyyaml>=6.0.0",
    "scipy>=1.10.0",
    "pandas>=2.0.0",
    "pygame>=2.1.2",
]

[project.optional-dependencies]
# GUI dependencies
gui = [
    "pyqtgraph>=0.13.0",
    "opencv-python>=4.8.0",
    "PyQt6>=6.9.0",
    "PyQt6-Qt6>=6.9.0",
    "PyQt6-sip>=13.6.0",
]

# Hardware-specific dependencies (Raspberry Pi)
hardware = [
    "pigpio>=1.78",
    "RPi.GPIO>=0.7.1; sys_platform == 'linux'",
    "gpiozero>=1.6.2; sys_platform == 'linux'",
    "adafruit-circuitpython-motor>=3.4.0",
    "adafruit-circuitpython-servokit>=1.3.0",
]

# Development dependencies
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
    "sphinx>=6.0.0",
    "sphinx-rtd-theme>=1.2.0",
]

# All optional dependencies
full = [
    "NeuRPi[gui,hardware,dev]",
]

[project.urls]
Homepage = "https://github.com/vaibrainium/NeuRPi"
Repository = "https://github.com/vaibrainium/NeuRPi"
"Bug Tracker" = "https://github.com/vaibrainium/NeuRPi/issues"

[project.scripts]
neurpi = "neurpi.cli.main:main"
neurpi-setup = "neurpi.cli.setup:main"
neurpi-deploy = "neurpi.cli.deploy:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["neurpi*", "protocols*"]

[tool.setuptools.package-data]
neurpi = ["config/*.yaml"]

# Testing configuration
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=neurpi --cov-report=term-missing --cov-report=html"

# Type checking
[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
